...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar-blank" translatesAutoresizingMaskIntoConstraints="NO" id="1hp-fm-kWM">
                                                            <rect key="frame" x="0.0" y="36" width="110" height="96"/>
                                                        </imageView>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Candidate Bio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rxj-OR-94M">
                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                                    <color key="backgroundColor" red="0.92313467319999998" green="0.93635877729999994" blue="0.95273642020000004" alpha="1" colorSpace="calibratedRGB"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pKv-X7-2dQ">
                                                    <rect key="frame" x="221" y="51" width="158" height="30"/>
                                                    <state key="normal" title="Go To Discussion Form"/>
                                                    <connections>
                                                        <action selector="goToDiscussionForumButton:" destination="AIn-6u-ouM" eventType="touchUpInside" id="Ies-MS-hMr"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gvg-jk-81d" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Current Events" image="currentEvents" id="XWf-aH-fHu">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="A6e-IH-pJd" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Upcoming" image="upcoming" id="cPa-gy-q4n">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="M45-OX-4dd" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="home" id="acW-dT-cKf">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EYb-ji-eVi">
                                                    <rect key="frame" x="461" y="7" width="121" height="30"/>
                                                    <state key="normal" title="Set New Location"/>
                                                    <connections>
                                                        <action selector="changeLocationButtonPress:" destination="RTU-7U-5Dn" eventType="touchUpInside" id="euO-hL-UQf"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HnS-eq-N6y" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="settings" id="J2t-TT-1If">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
...
